# vaptor

./: .gitignore  README.md  pyproject.toml  requirements.txt  vaptor.py
config/: config.py
core/: input_handler.py  normalizer.py  orchestrator.py  smart_scan.py
correlator/: engine.py
db/: db_manager.py
output/: excel_writer.py  json_writer.py  matrix_builder.py
parsers/: nessus_parser.py  nmap_parser.py  ssl_parser.py
scanners/: nessus.py  nmap.py  ssl.py
scripts/: install.py
utils/: cli_formatter.py  colors.py  logger.py  poc_generator.py  screen_capture.py  terminal_capture.py  vuln_categorizer.py
vaptor/: main.py
